<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_bannerMovieName">The Wolverine 2023\nOfficial Review</string>
    <string name="lbl_best_popular_films_and_series">Best Popular Films and Series</string>
    <string name="lbl_need_for_speed_movie">Need For Speed</string>
    <string name="lbl_movie_rating">8.20</string>
    <string name="lbl_check_movie_show_times">Check Movie\nShowtimes</string>
    <string name="lbl_see_more"><u>SEE MORE</u></string>
    <string name="lbl_show_cases">SHOWCASES</string>
    <string name="lbl_more_showcases"><u>MORE SHOWCASES</u></string>
    <string name="lbl_showcase_movie_date">15 DEC 2016</string>
    <string name="lbl_showcase_movie_name">Now You See Me</string>
    <string name="lbl_best_actors">BEST ACTORS</string>
    <string name="lbl_more_actors"><u>MORE ACTORS</u></string>
    <string name="lbl_story_line">STORYLINE</string>
    <string name="lbl_rate_movie">RATE MOVIE</string>
    <string name="lbl_actors">ACTORS</string>
    <string name="lbl_creators">CREATORS</string>
    <string name="lbl_more_creators"><u>MORE CREATORS</u></string>
    <string name="lbl_original_title_label">Original Title: </string>
    <string name="lbl_type">Type: </string>
    <string name="lbl_production">Production: </string>
    <string name="lbl_premiere">Premiere:</string>
    <string name="lbl_description">Description:</string>
    <string name="lbl_about_film">ABOUT FILM</string>
    <string name="lbl_hint_search_movie">Please Enter Movie Name</string>
    <string name="lbl_tv_movie_name">Fantastic Beasts And Where To Find Them</string>
    <string name="lbl_movie_votes">388876 VOTES</string>
</resources>