<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <!-- AppBar Layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/lbl_discover"
            app:titleCentered="true"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Indicator -->
            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotsIndicatorBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    app:dotsColor="@android:color/darker_gray"
                    app:dotsCornerRadius="@dimen/margin_small"
                    app:dotsSize="@dimen/margin_medium"
                    app:dotsSpacing="@dimen/margin_small"
                    android:elevation="@dimen/margin_small"
                    app:dotsWidthFactor="1"
                    app:selectedDotColor="@color/colorAccent"
                    app:progressMode="false" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBestPopularFilmsAndSeriesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/lbl_best_popular_films_and_series"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                android:layout_below="@+id/flBanner"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"/>

            <include
                android:id="@+id/vpBestPopularMovieList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/view_pod_movie_list"
                android:layout_below="@id/tvBestPopularFilmsAndSeriesLabel"
                android:layout_marginTop="@dimen/margin_medium_2"/>

            <RelativeLayout
                android:id="@+id/rlCheckMovieShowTime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_check_movie_show_times"
                android:layout_below="@+id/vpBestPopularMovieList"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@color/colorPrimaryLight">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCheckMovieShowTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/lbl_check_movie_show_times"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_regular_3x"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/text_heading_1x"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/lbl_see_more"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginBottom="@dimen/margin_medium_3"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCheckMovieShowTimeLocation"
                    android:layout_width="@dimen/margin_xxlarge"
                    android:layout_height="@dimen/margin_xxlarge"
                    app:srcCompat="@drawable/ic_baseline_location_on_white_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_xlarge"/>

            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlCheckMovieShowTime"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@color/colorPrimary"
                app:tabTextColor="@color/colorSecondaryText"
                app:tabSelectedTextColor="@color/white"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMode="scrollable"/>

            <FrameLayout
                android:id="@+id/flMoviesByGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_medium_3"
                android:paddingBottom="@dimen/margin_large"
                android:layout_below="@+id/tabLayoutGenre">

                <include
                    android:id="@+id/vpMoviesByGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/view_pod_movie_list"/>

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowcasesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/lbl_show_cases"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                android:layout_below="@+id/flMoviesByGenre"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMoreShowcasesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/lbl_more_showcases"
                android:layout_alignBaseline="@+id/tvShowcasesLabel"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/margin_medium_2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowcases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvShowcasesLabel"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:paddingEnd="@dimen/margin_medium_2"
                android:clipToPadding="false" />

            <include
                android:id="@+id/vpBestActors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/view_pod_actor_lists"
                android:layout_below="@id/rvShowcases"
                android:layout_marginTop="@dimen/margin_medium_3"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>